<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_bg_light"
    android:id="@+id/layout_notification_line_settings"
    android:padding="@dimen/dimen_8_dp"
    android:layout_margin="@dimen/dimen_8_dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_8_dp"
        android:paddingTop="@dimen/dimen_8_dp"
        android:text="@string/custom_settings"
        android:textColor="@color/color_gray_light"
        android:textSize="@dimen/font_size_normal_16dp" />
    <RelativeLayout
        android:id="@+id/rl_notification_display_config"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        android:layout_marginTop="@dimen/dimen_8_dp">

        <ImageView
            android:id="@+id/auto_start_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:tint="#459cff"
            android:src="@drawable/ic_display" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/auto_start_img"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/color_gray_light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:gravity="center"
                android:text="@string/notification_show_when"
                android:textSize="@dimen/font_size_normal_15dp" />

            <TextView
                android:textColor="@color/color_gray_light"
                android:id="@+id/tv_display_config_summary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:gravity="center"
                android:text="@string/notification_show_when_notify"
                android:textSize="@dimen/font_size_small_12dp" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_use_mixed_color_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp">
        <ImageView
            android:id="@+id/mixed_color_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dimen_2_dp"
            android:src="@drawable/ic_mixed"
            android:tint="#00bbcc" />
        <TextView
            android:layout_toRightOf="@id/mixed_color_img"
            android:textColor="@color/color_gray_light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_10_dp"
            android:layout_marginStart="@dimen/dimen_10_dp"
            android:gravity="center"
            android:text="@string/notification_mixed_colors"
            android:textSize="@dimen/font_size_normal_15dp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_mixed_colors_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/dimen_8_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/settings_item_bg">
        <com.zibuyuqing.roundcorner.ui.widget.LinearGradientView
            android:id="@+id/lgv_mixed_colors_preview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2_dp"
            android:layout_alignParentLeft="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_64_dp">
            <ImageView
                android:id="@+id/iv_mixed_color_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:paddingTop="@dimen/dimen_24_dp"
                android:src="@drawable/ic_color_preview" />
            <ImageView
                android:id="@+id/iv_mixed_color_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:paddingTop="@dimen/dimen_24_dp"
                android:src="@drawable/ic_color_preview" />
            <ImageView
                android:id="@+id/iv_mixed_color_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:paddingTop="@dimen/dimen_24_dp"
                android:src="@drawable/ic_color_preview" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_line_size"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/line_size_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/dimen_2_dp"
            android:src="@drawable/ic_line_size"
            android:tint="#00ffaa" />

        <TextView
            android:textColor="@color/color_gray_light"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_marginLeft="@dimen/dimen_10_dp"
            android:layout_marginStart="@dimen/dimen_10_dp"
            android:layout_toRightOf="@id/line_size_img"
            android:gravity="center"
            android:text="@string/notification_line_size"
            android:textSize="@dimen/font_size_normal_15dp" />

        <TextView
            android:id="@+id/tv_line_size"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_24_dp"
            android:textColor="@color/color_gray_light"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="12" />

        <SeekBar
            android:id="@+id/sb_change_line_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/max_notification_line_size"
            android:min="@integer/min_notification_line_size"
            android:progress="@integer/notification_line_size"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_change_animation_duration_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/animation_duration_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/dimen_2_dp"
            android:src="@drawable/ic_time"
            android:tint="#0905e7" />

        <TextView
            android:textColor="@color/color_gray_light"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_marginLeft="@dimen/dimen_10_dp"
            android:layout_marginStart="@dimen/dimen_10_dp"
            android:layout_toRightOf="@id/animation_duration_img"
            android:gravity="center"
            android:text="@string/notification_animation_duration"
            android:textSize="@dimen/font_size_normal_15dp" />

        <TextView
            android:id="@+id/tv_animation_duration"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_24_dp"
            android:textColor="@color/color_gray_light"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="12" />

        <SeekBar
            android:id="@+id/sb_change_animation_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/max_notification_animation_duration"
            android:min="@integer/min_notification_animation_duration"
            android:progress="@integer/notification_animation_duration"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_line_animation_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        android:layout_marginTop="@dimen/dimen_8_dp">

        <ImageView
            android:id="@+id/line_auto_start_img"
            android:layout_width="@dimen/dimen_24_dp"
            android:layout_height="@dimen/dimen_24_dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dimen_2_dp"
            android:src="@drawable/ic_style"
            android:tint="#ff7d4a" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/line_auto_start_img"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/color_gray_light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:gravity="center"
                android:text="@string/notification_animation_style"
                android:textSize="@dimen/font_size_normal_15dp" />

            <TextView
                android:textColor="@color/color_gray_light"
                android:id="@+id/tv_animation_style_summary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:layout_marginStart="@dimen/dimen_10_dp"
                android:gravity="center"
                android:text="@string/animation_style_fade_in_out"
                android:textSize="@dimen/font_size_small_12dp" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>